--- a/camerakit/src/main/res/layout/texture_view.xml
+++ b/camerakit/src/main/res/layout/texture_view.xml
@@ -3,6 +3,7 @@
 
     <TextureView
         android:id="@+id/texture_view"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
