Added sessionType to switch between picture and video. Deprecated permissionsPolicy and captureMethod. Improved video sizing.

--- a/camerakit/src/main/res/values/attrs.xml
+++ b/camerakit/src/main/res/values/attrs.xml
@@ -43,6 +43,11 @@
             <enum name="frame" value="1" />
         </attr>
 
+        <attr name="cameraSessionType" format="enum">
+            <enum name="picture" value="0" />
+            <enum name="video" value="1" />
+        </attr>
+
         <attr name="cameraPermissionPolicy" format="enum">
             <enum name="video" value="0" />
             <enum name="picture" value="1" />
