--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white"
-    android:descendantFocusability="beforeDescendants"
-    android:focusable="true"
-    android:focusableInTouchMode="true">
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/activity_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/white"
+            android:descendantFocusability="beforeDescendants"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,12 +24,12 @@
                 android:layout_height="400dp"
                 android:layout_gravity="center_horizontal"
                 android:adjustViewBounds="true"
-                app:ckCropOutput="false"
-                app:ckFacing="back"
-                app:ckFlash="off"
-                app:ckFocus="tapWithMarker"
-                app:ckJpegQuality="100"
-                app:ckMethod="standard" />
+                app:cameraCropOutput="false"
+                app:cameraFacing="back"
+                app:cameraFlash="off"
+                app:cameraFocus="tapWithMarker"
+                app:cameraJpegQuality="100"
+                app:cameraSessionType="picture" />
 
         </RelativeLayout>
 
@@ -62,8 +63,7 @@
                     android:layout_weight="1"
                     android:backgroundTint="@color/colorPrimary"
                     android:src="@drawable/ic_video"
-                    android:tint="@android:color/white"
-                    android:visibility="gone" />
+                    android:tint="@android:color/white" />
 
                 <ImageButton
                     android:id="@+id/toggleFlash"
