--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -9,6 +9,8 @@
             android:focusable="true"
             android:focusableInTouchMode="true">
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -23,6 +25,7 @@
                 android:layout_height="400dp"
                 android:layout_gravity="center_horizontal"
                 android:keepScreenOn="true"
+                app:cameraZoomMode="off"
                 app:cameraGrid="off"
                 app:cameraCropOutput="false"
                 app:cameraFacing="back"
@@ -186,6 +189,59 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:text="On" />
+
+                    </RadioGroup>
+
+                </LinearLayout>
+
+            </FrameLayout>
+
+            <!-- Pinch to zoom -->
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp">
+
+                <View
+                    android:layout_width="2.5dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorPrimary" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:text="ZOOM MODE"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <RadioGroup
+                        android:id="@+id/zoomModeRadioGroup"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:checkedButton="@+id/zoomModeOff"
+                        android:orientation="horizontal">
+
+                        <RadioButton
+                            android:id="@+id/zoomModeOff"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Off" />
+
+                        <RadioButton
+                            android:id="@+id/zoomModePinch"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:text="Pinch to zoom" />
 
                     </RadioGroup>
 
