Added public CameraOptions to understand what is supported and what's not

--- a/camerakit/src/main/res/values/attrs.xml
+++ b/camerakit/src/main/res/values/attrs.xml
@@ -16,7 +16,7 @@
         </attr>
 
         <attr name="cameraFocus" format="enum">
-            <enum name="off" value="0" />
+            <enum name="fixed" value="0" />
             <enum name="continuous" value="1" />
             <enum name="tap" value="2" />
             <enum name="tapWithMarker" value="3" />
