--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -291,7 +291,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <com.flurgle.cameraview.demo.AutoUnfocusEditText
+                        <com.otaliastudios.cameraview.demo.AutoUnfocusEditText
                             android:id="@+id/width"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -391,7 +391,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <com.flurgle.cameraview.demo.AutoUnfocusEditText
+                        <com.otaliastudios.cameraview.demo.AutoUnfocusEditText
                             android:id="@+id/height"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
