--- a/cameraview/src/main/res/layout/layout_focus_marker.xml
+++ b/cameraview/src/main/res/layout/layout_focus_marker.xml
@@ -5,6 +5,7 @@
 
     <FrameLayout
         android:id="@+id/focusMarkerContainer"
+        android:alpha="0"
         android:layout_width="55dp"
         android:layout_height="55dp">
 
