--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -24,7 +24,7 @@
 
         <attr name="cameraGesturePinch" format="enum">
             <enum name="zoom" value="4" />
-            <enum name="aeCorrection" value="5" />
+            <enum name="exposureCorrection" value="5" />
         </attr>
 
         <attr name="cameraFacing" format="enum">
