--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -49,9 +49,9 @@
 
         <attr name="cameraGrid" format="enum">
             <enum name="off" value="0" />
-            <enum name="grid3x3" value="1" />
-            <enum name="grid4x4" value="2" />
-            <enum name="phi" value="3" />
+            <enum name="draw3x3" value="1" />
+            <enum name="draw4x4" value="2" />
+            <enum name="drawPhi" value="3" />
         </attr>
 
         <attr name="cameraSessionType" format="enum">
