Moved VideoQuality to enums

--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -62,13 +62,13 @@
         <attr name="cameraJpegQuality" format="integer" />
 
         <attr name="cameraVideoQuality" format="enum">
-            <enum name="max480p" value="0" />
-            <enum name="max720p" value="1" />
-            <enum name="max1080p" value="2" />
-            <enum name="max2160p" value="3" />
-            <enum name="highest" value="4" />
-            <enum name="lowest" value="5" />
-            <enum name="qvga" value="6" />
+            <enum name="lowest" value="0" />
+            <enum name="highest" value="1" />
+            <enum name="maxQvga" value="2" />
+            <enum name="max480p" value="3" />
+            <enum name="max720p" value="4" />
+            <enum name="max1080p" value="5" />
+            <enum name="max2160p" value="6" />
         </attr>
 
         <attr name="cameraCropOutput" format="boolean" />
