Scroll gestures support, abstracting GestureLayout

--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <com.otaliastudios.cameraview.CameraView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <com.otaliastudios.cameraview.CameraView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/camera"
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
@@ -32,6 +33,8 @@
                 app:cameraGestureTap="focusWithMarker"
                 app:cameraGestureLongTap="none"
                 app:cameraGesturePinch="zoom"
+                app:cameraGestureScrollHorizontal="exposureCorrection"
+                app:cameraGestureScrollVertical="none"
                 app:cameraJpegQuality="100"
                 app:cameraSessionType="picture" />
         </RelativeLayout>
