--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -23,9 +23,23 @@
         </attr>
 
         <attr name="cameraGesturePinch" format="enum">
+            <enum name="none" value="0" />
             <enum name="zoom" value="4" />
             <enum name="exposureCorrection" value="5" />
         </attr>
+
+        <attr name="cameraGestureScrollHorizontal" format="enum">
+            <enum name="none" value="0" />
+            <enum name="zoom" value="4" />
+            <enum name="exposureCorrection" value="5" />
+        </attr>
+
+        <attr name="cameraGestureScrollVertical" format="enum">
+            <enum name="none" value="0" />
+            <enum name="zoom" value="4" />
+            <enum name="exposureCorrection" value="5" />
+        </attr>
+
 
         <attr name="cameraFacing" format="enum">
             <enum name="back" value="0" />
