--- a/cameraview/src/main/res/layout/surface_view.xml
+++ b/cameraview/src/main/res/layout/surface_view.xml
@@ -3,8 +3,8 @@
 
     <SurfaceView
         android:id="@+id/surface_view"
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:gravity="center" />
 
 </merge>
