--- a/cameraview/src/main/res/layout/surface_view.xml
+++ b/cameraview/src/main/res/layout/surface_view.xml
@@ -5,6 +5,7 @@
         android:id="@+id/surface_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:gravity="center" />
 
 </merge>
