--- a/cameraview/src/main/res/layout/texture_view.xml
+++ b/cameraview/src/main/res/layout/texture_view.xml
@@ -3,8 +3,9 @@
 
     <TextureView
         android:id="@+id/texture_view"
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_gravity="center" />
 
 </merge>
