--- a/demo/src/main/res/layout/spinner_text.xml
+++ b/demo/src/main/res/layout/spinner_text.xml
@@ -2,6 +2,7 @@
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/TextAppearance.AppCompat.Medium"
-    android:padding="8dp"
+    android:padding="12dp"
+    android:textColor="@android:color/black"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"/>
