--- a/demo/src/main/res/drawable/background.xml
+++ b/demo/src/main/res/drawable/background.xml
@@ -2,5 +2,5 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/colorPrimary"/>
+    <solid android:color="@color/colorAccent"/>
 </shape>
