--- a/cameraview/src/main/res/layout/surface_view.xml
+++ b/cameraview/src/main/res/layout/surface_view.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <SurfaceView
-        android:id="@+id/surface_view"
+    <!-- This FL could be removed, I added to test if we could implement
+         proper cropping with SurfaceView. I was not easily able to. -->
+    <FrameLayout
+        android:id="@+id/surface_view_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:gravity="center" />
+        android:gravity="center">
 
+        <SurfaceView
+            android:id="@+id/surface_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
 </merge>
