--- a/cameraview/src/main/res/layout/texture_view.xml
+++ b/cameraview/src/main/res/layout/texture_view.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <TextureView
-        android:id="@+id/texture_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:layout_gravity="center" />
-
-</merge>
+<TextureView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/texture_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:layout_gravity="center" />
