Renamed isRecordingVideo, added xml attribute for video max size and updated the documentation

--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -110,6 +110,8 @@
 
         <attr name="cameraPlaySounds" format="boolean" />
 
+        <attr name="cameraVideoMaxSize" format="float" />
+
         <!-- deprecated attr name="cameraZoomMode" format="enum">
             <enum name="off" value="0" />
             <enum name="pinch" value="1" />
