Add setVideoMaxDuration() API

--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -112,6 +112,8 @@
 
         <attr name="cameraVideoMaxSize" format="float" />
 
+        <attr name="cameraVideoMaxDuration" format="integer" />
+
         <!-- deprecated attr name="cameraZoomMode" format="enum">
             <enum name="off" value="0" />
             <enum name="pinch" value="1" />
