Add GLCameraPreview based on GLSurfaceView, preview appears to be working with some bugs

--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -118,5 +118,7 @@
             <enum name="h264" value="2" />
         </attr>
 
+        <attr name="cameraExperimental" format="boolean" />
+
     </declare-styleable>
 </resources>
