--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -89,6 +89,8 @@
             <enum name="drawPhi" value="3" />
         </attr>
 
+        <attr name="cameraGridColor" format="color|reference"/>
+
         <attr name="cameraMode" format="enum">
             <enum name="picture" value="0" />
             <enum name="video" value="1" />
