Improvements for supporting a round preview and output

--- a/cameraview/src/main/res/layout/cameraview_gl_view.xml
+++ b/cameraview/src/main/res/layout/cameraview_gl_view.xml
@@ -6,7 +6,8 @@
     android:layout_gravity="center"
     android:gravity="center">
 
-    <android.opengl.GLSurfaceView
+    <view
+        class="com.otaliastudios.cameraview.GlCameraPreview$ClippingSurfaceView"
         android:id="@+id/gl_surface_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
