Remove oval experiment

--- a/cameraview/src/main/res/layout/cameraview_gl_view.xml
+++ b/cameraview/src/main/res/layout/cameraview_gl_view.xml
@@ -6,8 +6,7 @@
     android:layout_gravity="center"
     android:gravity="center">
 
-    <view
-        class="com.otaliastudios.cameraview.GlCameraPreview$ClippingSurfaceView"
+    <android.opengl.GLSurfaceView
         android:id="@+id/gl_surface_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
